Using Leaflet.Basemaps for basemap control, fixes z-index issues.

--- a/landscapesim/static/css/base.css
+++ b/landscapesim/static/css/base.css
@@ -1153,7 +1153,14 @@ ul.buttons2 li.selected a, ul.buttons2 li.selected a:hover {
 
 .leaflet-left {
 	left: 360px;
+}
+
+.leaflet-top {
 	top: 10px;
+}
+
+.leaflet-bottom {
+	bottom: 50px;
 }
 
 #footer {
